--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,8 +141,10 @@ button {
   }
 
   .contenedor-sesion {
-    text-align: right;
-    width: 500px;
+    display: flex;
+    justify-content: flex-end;
+    width: 700px;
+    margin-right: 20px;
   }
   .contenedor-menu {
     display: flex;
