--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ button:hover {
   justify-content: flex-end;
   width: 700px;
   margin-right: 20px;
+  align-items: center;
 }
 
 .contenedor-menu {
